Fix bug related to screen overflowing numbers

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
   gap: 10px;
   width: 100%;
   padding: 20px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .fa-github {
